source/datahub/main/default/objects/DataHubSyncInfo__c/DataHubSyncInfo__c.object-meta.xml
<CustomObject>
    <label>DataHub Sync Info</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataHub Sync Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>