source/datahub/main/default/objects/DataHubSyncInfo__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>