source/datahub/main/default/objects/DataHubSyncInfo__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency In Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>