source/datahub/main/default/objects/DataHubSyncInfo__c/fields/IsUniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>IsUniqueIdentifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unique Identifier</label>
    <type>Checkbox</type>
</CustomField>