source/datahub/main/default/objects/DataHubSyncInfo__c/fields/LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>