source/datahub/main/default/objects/DataHubSyncInfo__c/fields/NextSyncDate__c.field-meta.xml
<CustomField>
    <fullName>NextSyncDate__c</fullName>
    <formula>LastSyncDate__c + (Frequency__c / 24)</formula>
    <label>Next Sync Date</label>
    <type>DateTime</type>
</CustomField>