source/datahub/main/default/objects/DataHubSyncInfo__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>