source/datahub/main/default/objects/DataHubSyncInfo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;PullAndPush&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pull</fullName>
                <label>Pull from External Systems</label>
            </value>
            <value>
                <fullName>Push</fullName>
                <label>Push to External Systems</label>
            </value>
            <value>
                <fullName>PullAndPush</fullName>
                <default>true</default>
                <label>Pull from and Push to External Systems</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>