source/datahub/main/default/objects/DataHubSyncInfo__c/validationRules/ExternalSystemsInvalid.validationRule-meta.xml
<ValidationRule>
    <fullName>ExternalSystemsInvalid</fullName>
    <active>false</active>
    <description>External Systems field must contain at least 1 ApiName and should be of format &quot;System1,System2,System3&quot;</description>
    <errorConditionFormula>ISBLANK(ExternalSystems__c) || NOT(REGEX(ExternalSystems__c, &quot;^[^,]+(?:,[^,]+)*$&quot;))</errorConditionFormula>
    <errorMessage>External Systems field must contain at least 1 ApiName and should be of format &quot;System1,System2,System3&quot;</errorMessage>
</ValidationRule>