source/datahub/main/default/objects/DataHubSyncInfo__c/validationRules/FrequencyNotFilledIn.validationRule-meta.xml
<ValidationRule>
    <fullName>FrequencyNotFilledIn</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Frequency__c)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Frequency is a required field, please fill in to be able to save the record.</errorMessage>
</ValidationRule>