source/datahub/main/default/objects/DataHubSyncInfo__c/validationRules/ObjectNameNotFilledIn.validationRule-meta.xml
<ValidationRule>
    <fullName>ObjectNameNotFilledIn</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ObjectName__c)</errorConditionFormula>
    <errorDisplayField>ObjectName__c</errorDisplayField>
    <errorMessage>Object name is a required field, please fill in to be able to save the record.</errorMessage>
</ValidationRule>