source/datahub/main/default/objects/DataHubSyncInfo__c/validationRules/SyncModeNotFilledIn.validationRule-meta.xml
<ValidationRule>
    <fullName>SyncModeNotFilledIn</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(SyncMode__c))</errorConditionFormula>
    <errorDisplayField>SyncMode__c</errorDisplayField>
    <errorMessage>Sync mode is a required field, please fill in to be able to save the record.</errorMessage>
</ValidationRule>